--- a/resources/static/dragndrop.css
+++ b/resources/static/dragndrop.css
@@ -78,5 +78,6 @@
 }
 
 .adc-dragndrop .drop_text { display:block;  width:100%; }
-.adc-dragndrop .responseItemMini { position:relative; }
-.adc-dragndrop .responseItemMini .cross { display:none; width:100%; height:100%; background:url(delete32.png) no-repeat center; position:absolute; top:0px; left:0px; }
+.adc-dragndrop .responseItemMini { position:relative; cursor:pointer; }
+.adc-dragndrop .responseItemMini .cross { display:none; width:100%; height:100%; position:absolute; top:0px; left:0px; }
+.adc-dragndrop .responseItemMini .cross img { width:100% !important; height:auto; vertical-align:middle; }
